Help ensure input fields are using box-sizing border-box to prevent overflow from border/padding in browser

--- a/ui/js/dfv/src/fields/wysiwyg/wysiwyg.scss
+++ b/ui/js/dfv/src/fields/wysiwyg/wysiwyg.scss
@@ -18,6 +18,7 @@
 		width: 100%;
 		border: none;
 		margin-bottom: 0;
+		box-sizing: border-box;
 	}
 }
 
